Move stylable functions into an interface
XfdashboardActor will not implement and provide styling possibilities but implements the new stylable interface (XfdashboardStylable). Moving the functionality into an interface gives us the opportunity to style non-actors also (anytime later).

Why should non-actors be stylable by CSS? That's because non-actors like XfdashboardWindowContents or XfdashboardImage will be visible because they are used by (visible and drawn) actors. This is not implemented yet but prepared.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -44,6 +44,7 @@ xfdashboard_headers = \
 	search-result-set.h \
 	search-view.h \
 	stage.h \
+	stylable.h \
 	text-box.h \
 	theme.h \
 	theme-css.h \
@@ -94,6 +95,7 @@ xfdashboard_SOURCES = \
 	search-result-set.c \
 	search-view.c \
 	stage.c \
+	stylable.c \
 	text-box.c \
 	theme.c \
 	theme-css.c \
