Initial implementation of focus manager
Initial implementation of focus manager supports focusing searchbox by default and routing all key press and key release events to this focusable actor except for TAB, Shift+TAB and ESC key presses (and/or release) which are handled by stage and/or focus-manager.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,6 +30,8 @@ xfdashboard_headers = \
 	drag-action.h \
 	drop-action.h \
 	fill-box-layout.h \
+	focusable.h \
+	focus-manager.h \
 	image.h \
 	layoutable.h \
 	live-window.h \
@@ -80,6 +82,8 @@ xfdashboard_SOURCES = \
 	drag-action.c \
 	drop-action.c \
 	fill-box-layout.c \
+	focusable.c \
+	focus-manager.c \
 	image.c \
 	layoutable.c \
 	live-window.c \
