Add auto-start .desktop file and application .desktop file for application menu
This commit addresses issue #11. Adds a disabled-by-default auto-start desktop file to system-wide auto-start folder as defined by freedesktop.org and adds an application entry in applications menu.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ src/stamp-marshal.h
 src/xfdashboard
 xfoverview.geany
 data/themes/xfdashboard/xfdashboard.theme
+data/xfdashboard.desktop
+data/xfdashboard.desktop.in
+data/xfdashboard-autostart.desktop
+data/xfdashboard-autostart.desktop.in
 
 # Ignore autotools files
 COPYING
