Rename class XfdashboardImage to XfdashboardImageContent and refactor code
Warning: Massive API break because of renamed class and functions. Renamed XfdashboardImage to XfdashboardImageContent to keep class name in sync with naming convention I used so far (see XfdashboardWindowContent for a ClutterContent derived class and ClutterImage, which XfdashboardImage is derived from, is also a ClutterContent derived class). Also XfdashboardImage is now free e.g. for an actor utilizing XfdashboardImageContent.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -32,7 +32,7 @@ xfdashboard_headers = \
 	fill-box-layout.h \
 	focusable.h \
 	focus-manager.h \
-	image.h \
+	image-content.h \
 	layoutable.h \
 	live-window.h \
 	live-workspace.h \
@@ -84,7 +84,7 @@ xfdashboard_SOURCES = \
 	fill-box-layout.c \
 	focusable.c \
 	focus-manager.c \
-	image.c \
+	image-content.c \
 	layoutable.c \
 	live-window.c \
 	live-workspace.c \
