Allow view icon to be themed in CSS instead of enforcing use of default icon specified by view

--- a/data/themes/xfdashboard/Makefile.am
+++ b/data/themes/xfdashboard/Makefile.am
@@ -6,7 +6,8 @@ theme_in_files = \
 theme_DATA = \
 	$(theme_in_files:.theme.in=.theme) \
 	xfdashboard.css \
-	xfdashboard.xml
+	xfdashboard.xml \
+	windows-view.png
 
 @INTLTOOL_THEME_RULE@
 
