Add application icon for xfdashboard
Thanks to NyankoSensei we have now an application icon and can close issue #12

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,5 +1,6 @@
-SUBDIRS =								\
-	themes
+SUBDIRS =	\
+	themes	\
+	icons
 
 desktopdir = $(datadir)/applications
 desktop_in_files = xfdashboard.desktop.in
