--- a/configure.ac.in
+++ b/configure.ac.in
@@ -189,6 +189,16 @@ AC_SUBST([PLATFORM_LDFLAGS])
 AC_OUTPUT([
 Makefile
 data/Makefile
+data/icons/Makefile
+data/icons/16x16/Makefile
+data/icons/22x22/Makefile
+data/icons/24x24/Makefile
+data/icons/32x32/Makefile
+data/icons/48x48/Makefile
+data/icons/64x64/Makefile
+data/icons/96x96/Makefile
+data/icons/128x128/Makefile
+data/icons/256x256/Makefile
 data/themes/Makefile
 data/themes/xfdashboard/Makefile
 po/Makefile.in
