Use new application icon in desktop files
Mofied the wrong .desktop file which got overridden by .desktop.in and .desktop.in.in. So commit f36f3459e06da8172f73650b32cc155682a2bce1 did not include the changes.

--- a/data/xfdashboard-autostart.desktop.in.in
+++ b/data/xfdashboard-autostart.desktop.in.in
@@ -4,6 +4,7 @@ _Name=Xfdashboard
 _Comment=Start xfdashboard as daemon in background
 TryExec=@bindir@/xfdashboard -d
 Exec=@bindir@/xfdashboard -d
-OnlyShowIn=XFCE;
+Icon=xfdashboard
+NotShowIn=GNOME;KDE;
 Terminal=false
 Hidden=true
