--- a/data/xfdashboard.desktop.in.in
+++ b/data/xfdashboard.desktop.in.in
@@ -4,6 +4,7 @@ _Name=Xfdashboard
 _Comment=Maybe a Gnome shell like dashboard for Xfce
 TryExec=@bindir@/xfdashboard
 Exec=@bindir@/xfdashboard
+Icon=xfdashboard
 Categories=System;
-OnlyShowIn=XFCE;
+NotShowIn=GNOME;KDE;
 Terminal=false
