--- a/configure.ac.in
+++ b/configure.ac.in
@@ -189,6 +189,7 @@ AC_SUBST([PLATFORM_LDFLAGS])
 AC_OUTPUT([
 Makefile
 data/Makefile
+data/appdata/Makefile
 data/icons/Makefile
 data/icons/16x16/Makefile
 data/icons/22x22/Makefile
