Fixed POTFILES.in for new and renamed files
Finally it is possible to create xfdashboard.pot file with "make update-po" in sub-folder /po :)

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,9 +1,11 @@
 [encoding: UTF-8]
 data/appdata/xfdashboard.appdata.xml.in
 data/themes/xfdashboard/xfdashboard.theme.in
+src/actor.c
 src/application-button.c
 src/application.c
 src/applications-menu-model.c
+src/applications-search-provider.c
 src/applications-view.c
 src/background.c
 src/button.c
@@ -13,18 +15,31 @@ src/drag-action.c
 src/drop-action.c
 src/enums.c
 src/fill-box-layout.c
-src/image.c
+src/focusable.c
+src/focus-manager.c
+src/image-content.c
+src/layoutable.c
 src/live-window.c
 src/live-workspace.c
 src/main.c
 src/marshal.c
+src/outline-effect.c
 src/quicklaunch.c
 src/scaled-table-layout.c
 src/scrollbar.c
+src/search-manager.c
+src/search-provider.c
+src/search-result-container.c
+src/search-result-set.c
 src/search-view.c
 src/stage.c
+src/stylable.c
 src/text-box.c
+src/theme.c
+src/theme-css.c
+src/theme-layout.c
 src/toggle-button.c
+src/tooltip-action.c
 src/utils.c
 src/view.c
 src/view-manager.c
