Adding XML parser for effects to theme
First step in closing issue #34 by implementing a XML parser to theme which can read in XML data for effects. To get an effect XML file loaded the descriptive xfdashboard.theme file needs a new entry "Effects=" with a semi-colon separated list of files to load. The new XfdashboardThemeEffects object still misses the "real" creation function and also the basic XfdashboardActor does not make any use of it yet. But this is also only step one ;)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -51,6 +51,7 @@ xfdashboard_headers = \
 	text-box.h \
 	theme.h \
 	theme-css.h \
+	theme-effects.h \
 	theme-layout.h \
 	toggle-button.h \
 	tooltip-action.h \
@@ -105,6 +106,7 @@ xfdashboard_SOURCES = \
 	text-box.c \
 	theme.c \
 	theme-css.c \
+	theme-effects.c \
 	theme-layout.c \
 	toggle-button.c \
 	tooltip-action.c \
