--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ data/xfdashboard.desktop
 data/xfdashboard.desktop.in
 data/xfdashboard-autostart.desktop
 data/xfdashboard-autostart.desktop.in
+ChangeLog
 
 # Ignore autotools files
 COPYING
