--- a/data/themes/xfdashboard/Makefile.am
+++ b/data/themes/xfdashboard/Makefile.am
@@ -7,6 +7,7 @@ theme_DATA = \
 	$(theme_in_files:.theme.in=.theme) \
 	xfdashboard.css \
 	xfdashboard.xml \
+	effects.xml \
 	windows-view.png
 
 @INTLTOOL_THEME_RULE@
