--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -13,6 +13,7 @@ src/background.c
 src/button.c
 src/click-action.c
 src/collapse-box.c
+src/css-selector.c
 src/drag-action.c
 src/drop-action.c
 src/dynamic-table-layout.c
