--- a/configure.ac.in
+++ b/configure.ac.in
@@ -25,6 +25,7 @@ m4_define([xfconf_minimum_version], [4.10.0])
 m4_define([dbus_glib_minimum_version], [0.98])
 m4_define([intltool_minimum_version], [0.31])
 m4_define([xcomposite_minimum_version], [0.2])
+m4_define([intltool_minimum_version], [0.35])
 
 dnl *******************************************
 dnl *** Debugging support for GIT snapshots ***
@@ -60,7 +61,7 @@ AC_PROG_CC()
 AM_PROG_CC_C_O()
 AC_PROG_LD()
 AC_PROG_INSTALL()
-AC_PROG_INTLTOOL()
+IT_PROG_INTLTOOL([intltool_minimum_version], [no-xml])
 AC_CHECK_PROGS([PERL], [perl5 perl])
 m4_ifdef([AC_PROG_SED], [AC_PROG_SED], [AC_CHECK_PROG(SED, sed, sed)])
 XDT_PROG_PKG_CONFIG()
