Added new theme 'xfdashboard-moranga' by lacios

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ xfoverview.geany
 data/appdata/xfdashboard.appdata.xml
 data/themes/xfdashboard/xfdashboard.theme
 data/themes/xfdashboard-dark/xfdashboard.theme
+data/themes/xfdashboard-moranga/xfdashboard.theme
 data/xfdashboard.desktop
 data/xfdashboard.desktop.in
 data/xfdashboard-autostart.desktop
