--- a/configure.ac.in
+++ b/configure.ac.in
@@ -203,6 +203,7 @@ data/icons/128x128/Makefile
 data/icons/256x256/Makefile
 data/themes/Makefile
 data/themes/xfdashboard/Makefile
+data/themes/xfdashboard-auber/Makefile
 data/themes/xfdashboard-dark/Makefile
 data/themes/xfdashboard-moranga/Makefile
 po/Makefile.in
