Add new theme 'xfdashboard-mint' by lacios

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ data/themes/xfdashboard/xfdashboard.theme
 data/themes/xfdashboard-auber/xfdashboard.theme
 data/themes/xfdashboard-blue/xfdashboard.theme
 data/themes/xfdashboard-dark/xfdashboard.theme
+data/themes/xfdashboard-mint/xfdashboard.theme
 data/themes/xfdashboard-moranga/xfdashboard.theme
 data/xfdashboard.desktop
 data/xfdashboard.desktop.in
