Add new theme 'xfdashboard-wine' by lacios

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ data/themes/xfdashboard-blue/xfdashboard.theme
 data/themes/xfdashboard-dark/xfdashboard.theme
 data/themes/xfdashboard-mint/xfdashboard.theme
 data/themes/xfdashboard-moranga/xfdashboard.theme
+data/themes/xfdashboard-wine/xfdashboard.theme
 data/xfdashboard.desktop
 data/xfdashboard.desktop.in
 data/xfdashboard-autostart.desktop
