Apply new theme while running application
This commit addresses and should fix issue #59. Rewrote XfdashboardApplication and XfdashboardStage to reload theme when xfconf property 'theme-name' changes. This introduces XfdashboardStageInterface as top-level actor for a stage (screen).

Sadly this also breaks current theme API. All references in CSS and XML files to class XfdashboardStage have to be replaced to XfdashboardStageInterface. The new actor XfdashboardStageInterface shares the same stylable properties as XfdashboardStage and all changes to XfdashboardStageInterface will be applied to XfdashboardStage on-the-fly. So XfdashboardStageInterface is a one-to-one in-place replacement for XfdashboardStage.

It is not the nicest solution as I wanted it to be but it could also be a preparation work for multi-monitor support (issue #14).

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -35,7 +35,6 @@ xfdashboard_headers = \
 	focusable.h \
 	focus-manager.h \
 	image-content.h \
-	layoutable.h \
 	live-window.h \
 	live-workspace.h \
 	outline-effect.h \
@@ -48,6 +47,7 @@ xfdashboard_headers = \
 	search-result-set.h \
 	search-view.h \
 	stage.h \
+	stage-interface.h \
 	stylable.h \
 	text-box.h \
 	theme.h \
@@ -90,7 +90,6 @@ xfdashboard_SOURCES = \
 	focusable.c \
 	focus-manager.c \
 	image-content.c \
-	layoutable.c \
 	live-window.c \
 	live-workspace.c \
 	main.c \
@@ -104,6 +103,7 @@ xfdashboard_SOURCES = \
 	search-result-set.c \
 	search-view.c \
 	stage.c \
+	stage-interface.c \
 	stylable.c \
 	text-box.c \
 	theme.c \
