--- a/configure.ac.in
+++ b/configure.ac.in
@@ -191,6 +191,7 @@ AC_OUTPUT([
 Makefile
 data/Makefile
 data/appdata/Makefile
+data/data/Makefile
 data/icons/Makefile
 data/icons/16x16/Makefile
 data/icons/22x22/Makefile
