--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,7 +24,8 @@ xfdashboard_headers = \
 	applications-search-provider.h \
 	applications-view.h \
 	background.h \
-	bindings.h \
+	binding.h \
+	bindings-pool.h \
 	button.h \
 	click-action.h \
 	collapse-box.h \
@@ -80,7 +81,8 @@ xfdashboard_SOURCES = \
 	applications-search-provider.c \
 	applications-view.c \
 	background.c \
-	bindings.c \
+	binding.c \
+	bindings-pool.c \
 	button.c \
 	click-action.c \
 	collapse-box.c \
