--- a/Makefile.am
+++ b/Makefile.am
@@ -2,19 +2,20 @@
 
 ACLOCAL_AMFLAGS=-I m4
 
-EXTRA_DIST =								\
-	intltool-extract.in						\
-	intltool-merge.in						\
+EXTRA_DIST = \
+	intltool-extract.in \
+	intltool-merge.in \
 	intltool-update.in
 
-DISTCLEANFILES =							\
-	intltool-extract						\
-	intltool-merge							\
+DISTCLEANFILES = \
+	intltool-extract \
+	intltool-merge \
 	intltool-update
 
-SUBDIRS = 								\
-	data								\
-	po 								\
+SUBDIRS = \
+	data \
+	po \
+	settings \
 	src
 
 distclean-local:
