--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -12,6 +12,10 @@ autostartdir = $(sysconfdir)/xdg/autostart
 autostart_in_files = xfdashboard-autostart.desktop.in
 autostart_DATA = $(autostart_in_files:.desktop.in=.desktop)
 
+settingsdir = $(datadir)/applications
+settings_in_files = xfdashboard-settings.desktop.in
+settings_DATA = $(settings_in_files:.desktop.in=.desktop)
+
 # Substitute bindir so it works when built in a non-system prefix
 xfdashboard.desktop.in:xfdashboard.desktop.in.in
 	$(AM_V_GEN) sed -e "s|@bindir[@]|$(bindir)|" \
@@ -23,14 +27,22 @@ xfdashboard-autostart.desktop.in:xfdashboard-autostart.desktop.in.in
 	    -e "s|@VERSION[@]|$(VERSION)|" \
 	    $< > $@ || rm $@
 
+xfdashboard-settings.desktop.in:xfdashboard-settings.desktop.in.in
+	$(AM_V_GEN) sed -e "s|@bindir[@]|$(bindir)|" \
+	    -e "s|@VERSION[@]|$(VERSION)|" \
+	    $< > $@ || rm $@
+
 @INTLTOOL_DESKTOP_RULE@
 
 EXTRA_DIST = \
 	$(desktop_in_files:.desktop.in=.desktop.in.in) \
-	$(autostart_in_files:.desktop.in=.desktop.in.in)
+	$(autostart_in_files:.desktop.in=.desktop.in.in) \
+	$(settings_in_files:.desktop.in=.desktop.in.in)
 
 CLEANFILES = \
 	$(desktop_in_files) \
 	$(desktop_DATA) \
 	$(autostart_in_files) \
-	$(autostart_DATA)
+	$(autostart_DATA) \
+	$(settings_in_files) \
+	$(settings_DATA)
