--- a/data/themes/xfdashboard-auber/xfdashboard.theme.in.in
+++ b/data/themes/xfdashboard-auber/xfdashboard.theme.in.in
@@ -5,5 +5,5 @@ Style=xfdashboard-auber.css
 Layout=xfdashboard.xml
 Effects=effects.xml
 Author=lacios
-Version=0.3.6git.788f9dc
+Version=@PACKAGE_VERSION@
 Screenshot=screenshot-xfdashboard-auber.png
