--- a/data/themes/xfdashboard-blue/Makefile.am
+++ b/data/themes/xfdashboard-blue/Makefile.am
@@ -10,11 +10,21 @@ theme_DATA = \
 	xfdashboard.xml \
 	effects.xml
 
+# Substitute bindir so it works when built in a non-system prefix
+xfdashboard.theme.in:xfdashboard.theme.in.in
+	$(AM_V_GEN) sed -e "s|@PACKAGE_VERSION[@]|$(PACKAGE_VERSION)|" \
+	    $< > $@ || rm $@
+
 @INTLTOOL_THEME_RULE@
 
+CLEANFILES = \
+	$(theme_in_files) \
+	$(theme_in_files:.theme.in=.theme)
+
 EXTRA_DIST = \
-	$(theme_DATA) \
-	xfdashboard.theme.in
+	$(theme_in_files:.theme.in=.theme.in.in) \
+	$(theme_DATA)
 
 DISTCLEANFILES = \
+	$(theme_in_files) \
 	$(theme_in_files:.theme.in=.theme)
