Fix typo in theme index file's description

--- a/data/themes/xfdashboard-blue/xfdashboard.theme.in.in
+++ b/data/themes/xfdashboard-blue/xfdashboard.theme.in.in
@@ -1,6 +1,6 @@
 [Xfdashboard Theme]
 _Name=xfdashboard-blue
-_Comment=Dark theme for xfdashboard
+_Comment=Blue theme for xfdashboard
 Style=xfdashboard-blue.css
 Layout=xfdashboard.xml
 Effects=effects.xml
