Rewrote hotkey tracker class
The old implementation lost the focus after a longer run (after 5 up to 15 minutes after start-up). So try another implementation using the X11 extension Xtst. This implementation is based on the ideas of ksuperkey/xcape and x11grabbr.

Hopefully this solves issue #69

--- a/xfdashboard/Makefile.am
+++ b/xfdashboard/Makefile.am
@@ -157,6 +157,14 @@ xfdashboard_LDADD = \
 	$(DBUS_GLIB_LIBS) \
 	-lm
 
+if XFDASHBOARD_BUILD_WITH_XTST
+xfdashboard_CFLAGS += \
+	$(XTST_CFLAGS)
+
+xfdashboard_LDADD += \
+	$(XTST_LIBS)
+endif
+
 if MAINTAINER_MODE
 
 CLEANFILES = \
