Fix build system
Respect configure options --[enable/disable]-xcomposite and --[enable/disable]-xdamage by checking if X11 extensions exist _AND_ set variables for Makefile to include necessary include paths and needed libs depending on the configure option.

Before I just checked the existence of required packages but nothing more. This means that enabling any of both extension was requested at 'configure' but clutter was not compiled with this extension the build must fail because the required header files and libraries were not be include because I did not add them in Makefile explicitly. I was relying on Clutter to be built with this extension and pulling them in.

--- a/xfdashboard/Makefile.am
+++ b/xfdashboard/Makefile.am
@@ -155,6 +155,22 @@ xfdashboard_LDADD = \
 	$(DBUS_GLIB_LIBS) \
 	-lm
 
+if XFDASHBOARD_BUILD_WITH_XCOMPOSITE
+xfdashboard_CFLAGS += \
+	$(XCOMPOSITE_CFLAGS)
+
+xfdashboard_LDADD += \
+	$(XCOMPOSITE_LIBS)
+endif
+
+if XFDASHBOARD_BUILD_WITH_XDAMAGE
+xfdashboard_CFLAGS += \
+	$(XDAMAGE_CFLAGS)
+
+xfdashboard_LDADD += \
+	$(XDAMAGE_LIBS)
+endif
+
 if MAINTAINER_MODE
 
 CLEANFILES = \
