--- a/configure.ac.in
+++ b/configure.ac.in
@@ -115,6 +115,11 @@ AC_ARG_ENABLE([xcomposite],
 	[enabled_x11_extension_composite="$enableval"],
 	[enabled_x11_extension_composite=yes]
 )
+
+AC_MSG_CHECKING([whether to build with X11 extension XComposite])
+AM_CONDITIONAL([XFDASHBOARD_BUILD_WITH_XCOMPOSITE], [test x"$enabled_x11_extension_composite" = x"yes"])
+AC_MSG_RESULT([$enabled_x11_extension_composite])
+
 if test "x$enabled_x11_extension_composite" = xyes; then
 	if $PKG_CONFIG --print-errors --exists xcomposite 2>&1; then
 		PKG_CHECK_MODULES(XCOMPOSITE, xcomposite >= [xcomposite_minimum_version])
@@ -133,6 +138,11 @@ AC_ARG_ENABLE([xdamage],
 	[enabled_x11_extension_damage="$enableval"],
 	[enabled_x11_extension_damage=yes]
 )
+
+AC_MSG_CHECKING([whether to build with X11 extension XDamage])
+AM_CONDITIONAL([XFDASHBOARD_BUILD_WITH_XDAMAGE], [test x"$enabled_x11_extension_damage" = x"yes"])
+AC_MSG_RESULT([$enabled_x11_extension_damage])
+
 if test "x$enabled_x11_extension_damage" = xyes; then
 	if $PKG_CONFIG --print-errors --exists xdamage 2>&1; then
 		PKG_CHECK_MODULES(XDAMAGE, xdamage)
